--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.main {
+  width: 100vw;
   min-height: 100vh;
+  background-color: grey;
+}
+
+.landingPage {
+  /* width: 90%; */
+  min-height: 100vh;
+  background-color: antiquewhite;
+}
+
+.landing {
+}
+
+.navbar {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  height: clamp(3rem, 4.5vw, 4.5rem);
+  background-color: rgb(49, 51, 58);
+  padding: 0 clamp(1rem, 10vw, 15rem);
+}
+.navbar .left {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+}
+.logo-name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.2rem;
+}
+.navbar .left img {
+  width: clamp(2rem, 3vw, 3.8rem);
+}
+
+.navbar .left .brandName {
+  color: rgb(226, 205, 19);
+  font-size: clamp(1.6rem, 3vw, 2rem);
+  font-weight: 500;
+  font-family: "Signika", sans-serif;
+  /* background-color: aquamarine; */
+}
+
+a {
+  text-decoration: none;
+}
+
+.currLocation {
+  color: aliceblue;
+  font-size: clamp(0.9rem, 2.5vw, 1rem);
+  font-weight: 500;
+  margin-left: 0.5rem;
+  /* background-color: aqua; */
+  padding-top: clamp(0.1rem, 0.2vw, 0.5rem);
+}
+.faBars {
   color: white;
+  /* font-size: 1.8rem; */
+  font-size: clamp(1.4rem, 2vw, 2rem);
+}
+.hoverable {
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 700px) {
+  .brandName {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  .currLocation {
+    margin-left: 0;
   }
 }
