--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,32 @@
 * {
   box-sizing: border-box;
+  font-family: "Dosis", sans-serif;
 }
 
 .main {
   width: 100vw;
   min-height: 100vh;
-  background-color: grey;
+  background-color: rgb(255, 255, 255);
 }
 
 .landingPage {
   /* width: 90%; */
   min-height: 100vh;
-  background-color: antiquewhite;
+  background-color: rgb(255, 255, 255);
 }
 
-.landing {
+.landingRest {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - clamp(3rem, 5.5vw, 4.5rem));
+  background-color: rgb(0, 153, 224);
+  background-image: url("../public/images/1644243.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* border: 4px solid black; */
 }
 
 .navbar {
@@ -22,8 +34,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  height: clamp(3rem, 4.5vw, 4.5rem);
-  background-color: rgb(49, 51, 58);
+  width: 100%;
+  height: clamp(3rem, 5.5vw, 4.5rem);
+  background-color: rgb(38, 40, 49);
   padding: 0 clamp(1rem, 10vw, 15rem);
 }
 .navbar .left {
@@ -39,14 +52,16 @@
   gap: 0.2rem;
 }
 .navbar .left img {
-  width: clamp(2rem, 3vw, 3.8rem);
+  width: clamp(2rem, 4vw, 3.5rem);
+  /* font-size: 2rem; */
+  /* background-color: aqua; */
 }
 
 .navbar .left .brandName {
   color: rgb(226, 205, 19);
   font-size: clamp(1.6rem, 3vw, 2rem);
   font-weight: 500;
-  font-family: "Signika", sans-serif;
+
   /* background-color: aquamarine; */
 }
 
@@ -55,12 +70,21 @@ a {
 }
 
 .currLocation {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   color: aliceblue;
-  font-size: clamp(0.9rem, 2.5vw, 1rem);
+  font-size: clamp(0.9rem, 2.5vw, 1.2rem);
   font-weight: 500;
   margin-left: 0.5rem;
   /* background-color: aqua; */
+  text-align: center;
   padding-top: clamp(0.1rem, 0.2vw, 0.5rem);
+}
+.currLocation span {
+  /* font-size: 0.8rem; */
+  /* padding-top: 0.4rem; */
+  /* background-color: aliceblue; */
 }
 .faBars {
   color: white;
@@ -71,7 +95,509 @@ a {
   cursor: pointer;
 }
 
-@media screen and (max-width: 700px) {
+.searchBarCon {
+  position: absolute;
+  top: 10rem;
+  left: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: clamp(0.1rem, 1vw, 0.3rem);
+  background-color: rgba(255, 255, 255, 0.685);
+  width: max(22rem, 45%);
+  height: 4rem;
+  border-radius: 0.3rem;
+  padding: 0.5rem;
+}
+.searchBarCon.on-focus {
+  border-radius: 0.3rem 0.3rem 0 0;
+  /* background-color: rgba(255, 255, 255, 0.485);
+  transition: background-color 0.2s ease-in-out; */
+}
+
+.searchBarCon img {
+  width: 2.2rem;
+  height: 80%;
+  padding: 0.4rem 0 0 0.3rem;
+  /* background-color: aqua; */
+}
+.searchBarCon input {
+  width: 90%;
+  height: 2.8rem;
+  padding: 0.5rem;
+  font-size: 1.6rem;
+  border: none;
+  background-color: transparent;
+  color: white;
+}
+.searchBarCon input::placeholder {
+  color: rgba(167, 164, 164, 0.856);
+  font-weight: 100;
+}
+.searchBarCon input:focus {
+  outline: none;
+}
+.searchResults {
+  position: absolute;
+  top: 14rem;
+  left: auto;
+  width: max(22rem, 45%);
+  background-color: aliceblue;
+  /* padding: 0.4rem 0; */
+  border-radius: 0 0 0.3rem 0.3rem;
+  border-top: 0.14rem solid rgb(236, 65, 2);
+}
+.useCurrLocation {
+  height: 3rem;
+  font-size: 1.2em;
+  /* background-color: rgb(65, 214, 165); */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+  padding-left: 1rem;
+  color: rgb(0, 0, 0, 0.5);
+}
+.useCurrLocation:hover {
+  background-color: rgb(226, 226, 226);
+  color: rgb(0, 0, 0, 0.75);
+
+  transition: all 0.15s ease-in-out;
+}
+.useCurrLocation img {
+  /* background-color: antiquewhite; */
+  width: 1.4rem;
+}
+.searchResult {
+  height: 3rem;
+  font-size: 1.4rem;
+  color: rgb(0, 0, 0, 0.55);
+  padding: 0.5rem 0 0 1rem;
+  border-radius: 0 0 0.3rem 0.3rem;
+
+  /* background-color: aquamarine; */
+}
+.searchResult:hover {
+  background-color: rgb(226, 226, 226);
+  color: rgb(0, 0, 0, 0.75);
+
+  transition: all 0.15s ease-in-out;
+}
+
+.currCondDiv {
+  width: max(22rem, 45%);
+  height: 20rem;
+  background-color: rgb(214, 214, 214);
+  padding: 1rem 1rem;
+  border-radius: 0.4rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.currCondDiv .content {
+  display: flex;
+  flex-direction: row;
+  font-size: 1.3rem;
+
+  padding: 0.4rem clamp(0rem, 1vw, 1rem);
+  gap: 1.5rem;
+}
+
+.content .left,
+.content .right {
+  width: 50%;
+  height: 12rem;
+}
+
+.content .left {
+  /* background-color: aquamarine; */
+}
+
+.left .time {
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+}
+
+.icon-temp {
+  display: flex;
+  flex-direction: row;
+  height: 70%;
+  /* background-color: pink; */
+}
+
+.icon-temp .icon {
+  width: 50%;
+}
+.icon-temp .temp {
+  width: 50%;
+}
+
+.temp .actual {
+  /* background-color: blanchedalmond; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.temp .actual span {
+  font-size: 6.5rem;
+  font-weight: 500;
+}
+
+.temp .real-feel {
+  display: flex;
+  font-weight: 400;
+  justify-content: center;
+  align-items: center;
+  /* background-color: antiquewhite; */
+}
+
+.content .right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* gap: 0.5rem; */
+  /* background-color: aqua; */
+}
+
+.right > * {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  height: 3rem;
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+.content .right > div:not(:first-child) {
+  border-top: 0.05rem solid rgba(173, 173, 173, 0.699);
+}
+
+.value {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-between;
+  padding: 0 1rem;
+  /* background-color: aqua; */
+}
+
+.footer .weather-text {
+  font-size: 1.6rem;
+  font-weight: 500;
+  /* background-color: orange; */
+}
+
+.footer .details {
+  display: flex;
+  font-size: 1.5rem;
+  font-weight: 600;
+  flex-direction: row;
+  align-items: center;
+  /* background-color: aqua; */
+  color: black;
+  /* text-decoration: none !important; */
+}
+
+.footer .details:hover {
+  color: rgb(0, 0, 0);
+}
+
+.arrow-right {
+  /* background-color: antiquewhite; */
+}
+
+.forecastBar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* gap: 2rem; */
+  width: 100vw;
+  height: 3rem;
+  padding: 0 clamp(1rem, 10vw, 15rem);
+  background-color: rgb(255, 255, 255);
+}
+.forecastBar > * {
+  font-size: 1.1rem;
+  width: 8rem;
+  height: 100%;
+  letter-spacing: 0.05rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: aqua; */
+  /* border: 1px solid black; */
+  font-weight: 300;
+  color: rgb(0, 0, 0);
+}
+.forecastBar .active {
+  color: rgb(0, 0, 0);
+  /* background-color: aquamarine; */
+  font-weight: 500;
+}
+
+.todayCon,
+.dailyCon {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  padding: 5rem 0;
+  align-items: center;
+  min-height: calc(100vh - 3rem - clamp(3rem, 5.5vw, 4.5rem));
+  background-color: rgb(228, 228, 228);
+}
+
+.currConDetailDiv {
+  width: clamp(22rem, 55%, 50rem);
+  height: fit-content;
+  background-color: rgb(255, 255, 255);
+  padding: 0.5rem 1rem;
+  border-radius: 0.4rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.currConDetailDiv .header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* background-color: aquamarine; */
+}
+.currConDetailDiv .header .name {
+  font-size: 1.3rem;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+}
+
+.currConDetailDiv .header .time {
+  font-size: 1.1rem;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+}
+
+.currConDetailDiv .middle {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.currConDetailDiv .middle .left {
+  width: 50%;
+  /* background-color: aqua; */
+}
+
+.currConDetailDiv .middle .right {
+  width: 50%;
+  height: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* background-color: aqua; */
+  padding: 0 1rem;
+}
+
+.currConDetailDiv .middle .right .real-feel {
+  /* width: 50%; */
+  /* background-color: rgb(141, 223, 223); */
+  /* justify-content: end; */
+}
+.currConDetailDiv .middle .right .real-feel-shade {
+  /* width: 50%; */
+  /* background-color: rgb(113, 187, 187); */
+}
+
+.right .real-feel,
+.right .real-feel-shade {
+  display: flex;
+  flex-direction: column;
+
+  align-items: flex-start;
+}
+
+.right .real-feel .bottom,
+.right .real-feel-shade .bottom {
+  /* background-color: aqua; */
+  font-size: 1rem;
+  color: grey;
+}
+
+.currConDetailDiv .footer {
+  padding-top: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+}
+
+.currConDetailDiv .footer > * {
+  width: 50%;
+}
+
+.currConDetailDiv .footer .left > *,
+.dNRDetailDiv .footer .left > * {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  height: 2.8rem;
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+.footer .right > * {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  height: 2.8rem;
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+
+.footer > * > div:not(:first-child) {
+  border-top: 0.05rem solid rgba(173, 173, 173, 0.699);
+}
+
+.oneDayCon {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.oneDayCon > * {
+  width: clamp(22rem, 55%, 50rem);
+  padding: 0.5rem 1rem;
+  border-radius: 0.4rem;
+  background-color: rgb(255, 255, 255);
+  margin-top: 2rem;
+}
+
+.dNRDetailDiv .header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.dNRDetailDiv .header .name,
+.riseSetDetailDiv .header {
+  font-size: 1.3rem;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+}
+
+.dNRDetailDiv .header .time {
+  font-size: 1.1rem;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+}
+
+.dNRDetailDiv .middle {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  /* background-color: antiquewhite;  */
+}
+
+.dNRDetailDiv .middle .right {
+  width: 50%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* background-color: aqua; */
+  padding: 0 1rem;
+}
+
+.dNRDetailDiv .middle {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  /* background-color: antiquewhite; */
+}
+
+.dNRDetailDiv .middle .left,
+.dNRDetailDiv .middle .right {
+  /* background-color: aliceblue; */
+  width: 50%;
+  height: 7rem;
+}
+
+.dNRDetailDiv .middle .right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* background-color: aqua; */
+  padding: 0 1rem;
+}
+
+.dNRDetailDiv .actual span {
+  /* background-color: aliceblue; */
+  font-size: 4.5rem;
+}
+
+.dNRDetailDiv .footer {
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+}
+
+.dNRDetailDiv .footer > * {
+  width: 50%;
+}
+
+.footer .first {
+  /* background-color: aqua; */
+  height: 3.5rem !important;
+}
+
+.first .period {
+  display: flex;
+  flex-direction: column;
+}
+
+.first .period * {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-align: end;
+}
+
+.dailyCon .navigatorDiv {
+  width: clamp(22rem, 55%, 50rem);
+  height: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 0;
+  /* background-color: aqua; */
+  border-bottom: 0.1rem solid rgb(173, 173, 173);
+}
+
+.dailyCon .navigatorDiv {
+}
+
+@media screen and (max-width: 900px) {
   .brandName {
     display: none;
   }
