--- a/src/App.css
+++ b/src/App.css
@@ -222,12 +222,16 @@ a {
 .icon-temp {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   height: 70%;
   /* background-color: pink; */
 }
 
 .icon-temp .icon {
   width: 50%;
+  height: 85%;
+  /* background-color: aqua; */
 }
 .icon-temp .temp {
   width: 50%;
@@ -389,6 +393,7 @@ a {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  height: 11rem;
 }
 
 .currConDetailDiv .middle .left {
@@ -396,9 +401,15 @@ a {
   /* background-color: aqua; */
 }
 
+.currConDetailDiv .weather-text,
+.dNRDetailDiv .weather-text {
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
 .currConDetailDiv .middle .right {
   width: 50%;
-  height: 10rem;
+
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -525,21 +536,10 @@ a {
   padding: 0 1rem;
 }
 
-.dNRDetailDiv .middle {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  /* background-color: antiquewhite; */
-}
-
-.dNRDetailDiv .middle .left,
-.dNRDetailDiv .middle .right {
+.dNRDetailDiv .middle > * {
   /* background-color: aliceblue; */
   width: 50%;
-  height: 7rem;
+  height: 9rem;
 }
 
 .dNRDetailDiv .middle .right {
@@ -568,7 +568,13 @@ a {
 
 .footer .first {
   /* background-color: aqua; */
-  height: 3.5rem !important;
+  height: 4rem !important;
+}
+
+.dNRDetailDiv .first img {
+  width: 40%;
+  height: 100%;
+    /* background-color: aqua; */
 }
 
 .first .period {
