--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 }
 
 .main {
+  position: relative;
   width: 100vw;
   min-height: 100vh;
   background-color: rgb(255, 255, 255);
@@ -11,7 +12,7 @@
 
 .landingPage {
   /* width: 90%; */
-  min-height: 100vh;
+  min-height: calc(100vh - clamp(3rem, 5.5vw, 4.5rem));
   background-color: rgb(255, 255, 255);
 }
 
@@ -64,6 +65,11 @@
 
   /* background-color: aquamarine; */
 }
+.loading  {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 a {
   text-decoration: none;
@@ -79,7 +85,13 @@ a {
   margin-left: 0.5rem;
   /* background-color: aqua; */
   text-align: center;
-  padding-top: clamp(0.1rem, 0.2vw, 0.5rem);
+  padding: clamp(0.1rem, 0.2vw, 0.5rem) .5rem;
+  border: 0.05rem solid rgb(122, 122, 122);
+  border-radius: 0.5rem;
+}
+
+.currLocation:hover{
+  border-color: rgb(180, 180, 180);
 }
 .currLocation span {
   /* font-size: 0.8rem; */
@@ -103,9 +115,9 @@ a {
   flex-direction: row;
   align-items: center;
   gap: clamp(0.1rem, 1vw, 0.3rem);
-  background-color: rgba(255, 255, 255, 0.685);
-  width: clamp(22rem, 90%, 50rem);
-  height: 4rem;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: clamp(22rem, 90%, 58rem);
+  height: 4.2rem;
   border-radius: 0.3rem;
   padding: 0.5rem;
 }
@@ -131,7 +143,7 @@ a {
   color: white;
 }
 .searchBarCon input::placeholder {
-  color: rgba(167, 164, 164, 0.856);
+  color: rgba(187, 187, 187, 0.956);
   font-weight: 100;
 }
 .searchBarCon input:focus {
@@ -139,9 +151,10 @@ a {
 }
 .searchResults {
   position: absolute;
+  z-index: 1;
   top: 14rem;
   left: auto;
-  width: max(22rem, 45%);
+  width: clamp(22rem, 90%, 58rem);
   background-color: aliceblue;
   /* padding: 0.4rem 0; */
   border-radius: 0 0 0.3rem 0.3rem;
@@ -185,13 +198,51 @@ a {
 }
 
 .currCondDiv {
-  width: clamp(22rem, 90%, 50rem);
+  width: clamp(22rem, 90%, 58rem);
   height: 20rem;
   background-color: rgb(214, 214, 214);
   padding: 1rem 1rem;
   border-radius: 0.4rem;
   font-size: 1.5rem;
   font-weight: 500;
+}
+
+.currCondDiv .actual .tempUnit,  .currConDetailDiv .actual .tempUnit {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  /* background-color: aqua; */
+  font-size: 6.5rem;
+  font-weight: 500;
+}
+
+.nightDetailDiv .actual .tempUnit, .dayDetailDiv .actual .tempUnit  {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  /* background-color: aqua; */
+  font-size: 4.5rem;
+  font-weight: 500;
+}
+
+.currCondDiv .tempUnit .deg, .currConDetailDiv .tempUnit .deg {
+  position: absolute;
+  top: 0.5rem;
+  /* background-color: aqua; */
+  width: 2.6rem;
+  color: antiquewhite;
+}
+
+.dayDetailDiv .tempUnit .deg, .nightDetailDiv .tempUnit .deg {
+  position: absolute;
+  top: 0.5rem;
+  /* background-color: aqua; */
+  width: 2.2rem;
+  color: antiquewhite;
+}
+
+.currCondDiv .tempUnit .unitCOrF {
+  width: 3rem;
 }
 
 .currCondDiv .content {
@@ -211,6 +262,7 @@ a {
 
 .content .left {
   /* background-color: aquamarine; */
+
 }
 
 .left .time {
@@ -222,15 +274,15 @@ a {
 .icon-temp {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   height: 70%;
   /* background-color: pink; */
 }
 
 .icon-temp .icon {
-  width: 10rem;
-  height: 6rem;
+  width: 12.5rem;
+  height: auto;
   /* background-color: aqua; */
 }
 .icon-temp .temp {
@@ -395,7 +447,7 @@ a {
   justify-content: space-between;
   /* background-color: aquamarine; */
 }
-.currConDetailDiv .header .name {
+.currConDetailDiv .header .name, .settingsPage .header {
   font-size: 1.3rem;
   font-weight: 600;
   letter-spacing: 0.05rem;
@@ -603,7 +655,7 @@ a {
 }
 
 .dailyCon .navigatorDiv {
-  width: clamp(22rem, 90%, 50rem);
+  width: clamp(22rem, 90%, 58rem);
   height: 2rem;
   display: flex;
   flex-direction: row;
@@ -614,9 +666,84 @@ a {
   border-bottom: 0.1rem solid rgb(173, 173, 173);
 }
 
+.settingsPage  {
+  display: flex;
+  padding-top: 5rem;
+  min-height: calc(100vh - clamp(3rem, 5.5vw, 4.5rem));
+  /* align-items: center; */
+  justify-content: center;
+  background-color: rgb(228,228,228);
+  /* background-color: rgb(150, 150, 150); */
+}
+
+.settingsCon  {
+  background-color: rgb(180, 180, 180);
+}
+
+.settingsCon .header{
+  padding: 0.5rem 0;
+}
+
+.settingsCon .body{
+  flex-direction: column;
+  width: 100%;
+}
+
+.settingsCon .body > *{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+  width: 100%;
+}
+
+.settingsCon .body > *:not(:first-child){
+  border-top: 0.1rem solid rgb(202, 202, 202);
+}
+
+.settingsCon .body > * .name{
+  font-size: 1.2rem;
+}
+
+.settingsCon .body > * .value{
+  font-size: 1.3rem;
+  display: flex;
+  flex-direction: row;
+
+}
+
+.settingsCon .toggleDiv {
+  margin: 0 0.5rem;
+  width: 3rem;
+  height: 1.6rem;
+  display: flex;
+  align-items: center;
+
+  border-radius: 0.8rem;
+  padding: 0 .25rem;
+  background-color: rgb(184, 184, 184);
+}
+
+.toggleDiv .ball  {
+  width: 1.2rem;
+  height: 1.2rem;
+  border-radius: 0.6rem;
+  background-color: rgb(255, 255, 255);
+}
+
+.settingsCon .toggleDiv.lefty  {
+  justify-content: left;
+}
+
+.settingsCon .toggleDiv.righty  {
+  justify-content: right;
+}
+
 .tile{
   box-shadow: 0.1rem 0.3rem 0.5rem rgb(139, 139, 139);
-  width: clamp(22rem, 90%, 50rem);
+  width: clamp(22rem, 90%, 58rem);
+  height: fit-content;
   padding: 0.5rem 1rem;
   border-radius: 0.4rem;
   background-color: rgb(255, 255, 255);
@@ -626,6 +753,56 @@ a {
 .tile:hover{
   box-shadow: 0.2rem 0.6rem 0.8rem rgb(175, 175, 175);
   transition: box-shadow 0.2s ease-out;
+}
+
+
+
+.sideCon  {
+  position: absolute;
+  right: -21rem;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  width: 20rem;
+  min-height: 100vh;
+  background-color: rgb(235, 235, 235);
+  transition: right 0.2s ease-out;
+}
+
+.sideCon.show {
+  right: 0;
+  transition: right 0.2s ease-in-out;
+}
+
+.sideCon > * {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  width: 100%;
+  /* background-color: antiquewhite; */
+  font-size: 1.3rem;
+  font-weight: 500;
+  letter-spacing: 0.08rem;
+  padding: 0 1rem;
+  height: 2.8rem;
+} 
+
+.crossCon {
+  height: 3rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-bottom: 2rem;
+  /* background-color: aqua; */
+}
+
+.crossCon svg{
+  width: 3.5rem;
+}
+
+.sideCon *:hover {
+  background-color: rgb(221, 221, 221);
 }
 
 
