--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   width: 100vw;
   min-height: 100vh;
   background-color: rgb(255, 255, 255);
+  overflow-x: hidden;
 }
 
 .landingPage {
@@ -38,7 +39,7 @@
   width: 100%;
   height: clamp(3rem, 5.5vw, 4.5rem);
   background-color: rgb(38, 40, 49);
-  padding: 0 clamp(1rem, 10vw, 15rem);
+  padding: 0 clamp(1rem, 6vw, 15rem);
 }
 .navbar .left {
   display: flex;
@@ -83,11 +84,12 @@ a {
   font-size: clamp(0.9rem, 2.5vw, 1.2rem);
   font-weight: 500;
   margin-left: 0.5rem;
+  height: clamp(2rem, 3.6vw, 2.4rem);
   /* background-color: aqua; */
   text-align: center;
   padding: clamp(0.1rem, 0.2vw, 0.5rem) .5rem;
   border: 0.05rem solid rgb(122, 122, 122);
-  border-radius: 0.5rem;
+  border-radius: 0.4rem;
 }
 
 .currLocation:hover{
@@ -109,7 +111,7 @@ a {
 
 .searchBarCon {
   position: absolute;
-  top: 10rem;
+  top: 8rem;
   left: auto;
   display: flex;
   flex-direction: row;
@@ -152,7 +154,7 @@ a {
 .searchResults {
   position: absolute;
   z-index: 1;
-  top: 14rem;
+  top: 12rem;
   left: auto;
   width: clamp(22rem, 90%, 58rem);
   background-color: aliceblue;
@@ -199,12 +201,13 @@ a {
 
 .currCondDiv {
   width: clamp(22rem, 90%, 58rem);
-  height: 20rem;
-  background-color: rgb(214, 214, 214);
+  height: 16.5rem;
+  background-color: rgb(233, 233, 233);
   padding: 1rem 1rem;
   border-radius: 0.4rem;
   font-size: 1.5rem;
   font-weight: 500;
+  margin-top: 8rem;
 }
 
 .currCondDiv .actual .tempUnit,  .currConDetailDiv .actual .tempUnit {
@@ -212,7 +215,7 @@ a {
   display: flex;
   flex-direction: row;
   /* background-color: aqua; */
-  font-size: 6.5rem;
+  font-size: clamp(3.5em, 10vw, 5.0em);
   font-weight: 500;
 }
 
@@ -221,7 +224,8 @@ a {
   display: flex;
   flex-direction: column;
   /* background-color: aqua; */
-  font-size: 4.5rem;
+  font-size: clamp(3.9em, 8.2vw, 5.3em);
+  min-width: 4rem;
   font-weight: 500;
 }
 
@@ -229,7 +233,7 @@ a {
   position: absolute;
   top: 0.5rem;
   /* background-color: aqua; */
-  width: 2.6rem;
+  width: clamp(0.35em, 4vw, 0.4em);
   color: antiquewhite;
 }
 
@@ -237,19 +241,21 @@ a {
   position: absolute;
   top: 0.5rem;
   /* background-color: aqua; */
-  width: 2.2rem;
+  width: clamp(0.35em, 4vw, .45em);
   color: antiquewhite;
 }
 
 .currCondDiv .tempUnit .unitCOrF {
-  width: 3rem;
+  width: 1em;
+
 }
 
 .currCondDiv .content {
   display: flex;
   flex-direction: row;
-  font-size: 1.3rem;
-
+  font-size: clamp(1rem, 4vw, 1.3rem);
+  justify-content: center;
+  /* align-items: center; */
   padding: 0.4rem clamp(0rem, 1vw, 1rem);
   gap: 1.5rem;
 }
@@ -257,12 +263,15 @@ a {
 .content .left,
 .content .right {
   width: 50%;
-  height: 12rem;
+  /* height: clamp(9rem, 15vw, 12rem); */
+  height: 10rem;
 }
 
 .content .left {
   /* background-color: aquamarine; */
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .left .time {
@@ -276,19 +285,21 @@ a {
   flex-direction: row;
   /* justify-content: space-between; */
   align-items: center;
-  height: 70%;
+  height: 65%;
+  padding: 0rem 0;
   /* background-color: pink; */
 }
 
 .icon-temp .icon {
-  width: 12.5rem;
+  /* width: 12.5rem; */
+  width: 50%;
   height: auto;
   /* background-color: aqua; */
 }
 .icon-temp .temp {
-  width: 50%;
+  width: 45%;
     /* background-color: aqua;  */
-    justify-content: right;
+  justify-content: right;
 }
 
 .temp .actual {
@@ -299,7 +310,7 @@ a {
 }
 
 .temp .actual span {
-  font-size: 6.5rem;
+  font-size: clamp(3.5em, 10vw, 5em);
   font-weight: 500;
 }
 
@@ -347,15 +358,15 @@ a {
 }
 
 .footer .weather-text {
-  font-size: 1.6rem;
-  font-weight: 500;
+  /* font-size: 1.6rem; */
+  font-weight: 400;
   /* background-color: orange; */
 }
 
 .footer .details {
   display: flex;
   font-size: 1.5rem;
-  font-weight: 600;
+  font-weight: 500;
   flex-direction: row;
   align-items: center;
   /* background-color: aqua; */
@@ -373,7 +384,7 @@ a {
 
 .forecastBarCon {
   width: 100vw;
-  height: 3rem;
+  height: clamp(2.6rem, 5vw, 3rem);
   background-color: rgb(82, 82, 82);
   display: flex;
   justify-content: center;
@@ -436,11 +447,11 @@ a {
   background-color: rgb(255, 255, 255);
   padding: 0.5rem 1rem;
   border-radius: 0.4rem;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: 500;
 }
 
-.currConDetailDiv .header {
+.currConDetailDiv .header, .currCondDiv .header {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -453,7 +464,7 @@ a {
   letter-spacing: 0.05rem;
 }
 
-.currConDetailDiv .header .time {
+.currConDetailDiv .header .time, .currCondDiv .header .time {
   font-size: 1.1rem;
   font-weight: 400;
   letter-spacing: 0.1rem;
@@ -474,8 +485,14 @@ a {
   /* background-color: aqua; */
 }
 
+.currConDetailDiv .middle > * {
+  height: 11rem;
+}
+
 .currConDetailDiv .weather-text,
 .dNRDetailDiv .weather-text {
+  /* padding: 0.5rem 0; */
+  /* margin-top: 2rem; */
   font-size: 1.1rem;
   font-weight: 500;
 }
@@ -575,6 +592,8 @@ a {
   letter-spacing: 0.1rem;
 }
 
+
+
 .dNRDetailDiv .header .time {
   font-size: 1.1rem;
   font-weight: 400;
@@ -591,6 +610,10 @@ a {
   /* background-color: antiquewhite;  */
 }
 
+.dNRDetailDiv .middle .left .icon {
+  width: 45%;
+}
+
 .dNRDetailDiv .middle .right {
   width: 50%;
   display: flex;
@@ -603,20 +626,12 @@ a {
 .dNRDetailDiv .middle > * {
   /* background-color: aliceblue; */
   width: 50%;
-  height: 9rem;
-}
-
-.dNRDetailDiv .middle .right {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  /* background-color: aqua; */
-  padding: 0 1rem;
+  height: 11rem;
 }
 
 .dNRDetailDiv .actual span {
   /* background-color: aliceblue; */
-  font-size: 4.5rem;
+  font-size: clamp(4em, 8vw, 5.5em);
 }
 
 .dNRDetailDiv .footer {
@@ -742,7 +757,7 @@ a {
 
 .tile{
   box-shadow: 0.1rem 0.3rem 0.5rem rgb(139, 139, 139);
-  width: clamp(22rem, 90%, 58rem);
+  width: clamp(24rem, 90%, 58rem);
   height: fit-content;
   padding: 0.5rem 1rem;
   border-radius: 0.4rem;
@@ -752,10 +767,12 @@ a {
 
 .tile:hover{
   box-shadow: 0.2rem 0.6rem 0.8rem rgb(175, 175, 175);
-  transition: box-shadow 0.2s ease-out;
+  transition: box-shadow 0.4s ease-out;
 }
 
-
+.tile .header{
+  padding-bottom: 1rem;
+}
 
 .sideCon  {
   position: absolute;
@@ -766,7 +783,7 @@ a {
   width: 20rem;
   min-height: 100vh;
   background-color: rgb(235, 235, 235);
-  transition: right 0.2s ease-out;
+  transition: right 0.4s ease-out;
 }
 
 .sideCon.show {
@@ -806,11 +823,74 @@ a {
 }
 
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 700px) {
   .brandName {
     display: none;
   }
   .currLocation {
-    margin-left: 0;
+    /* margin-left: 0; */
   }
+  .content .right{
+    display: none;
+  }
+  .content .left{
+    width: 70%;
+  }
+
+  .currConDetailDiv .middle, .dNRDetailDiv .middle {
+    flex-direction: column;
+    height: fit-content;
+  }
+
+  .currConDetailDiv .middle > *, .dNRDetailDiv .middle > *{
+    width: 70%!important;
+    gap: 1rem;
+    height: fit-content;
+  }
+
+  .currConDetailDiv .middle .right, .dNRDetailDiv .middle .right {
+    
+    height: fit-content;
+    gap: 1rem;
+    padding: 1rem 0;
+  }
+
+  .currConDetailDiv .middle .right > *, .dNRDetailDiv .middle .right > *{
+
+    justify-content: center;
+    align-items: center;
+
+  }
+
+  /* .icon-temp  {
+    width: 100%;
+  } */
+
+  .currConDetailDiv .weather-text,
+  .dNRDetailDiv .weather-text {
+    text-align: center;
+    width: 100%;
+  }
+
+  .currConDetailDiv .footer, .dNRDetailDiv .footer {
+  flex-direction: column;
+  gap: 0;
+}
+
+.currConDetailDiv .footer > *, .dNRDetailDiv .footer > *{
+  width: 100%;
+}
+
+.footer > .right > div {
+  border-top: 0.05rem solid rgba(173, 173, 173, 0.699);
+}
+
+.riseSetDetailDiv .footer .right{
+  margin-top: 1rem;
+}
+
+.riseSetDetailDiv .footer .right .first{
+  border: none;
+}
+
 }
