--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: calc(100vh - clamp(3rem, 5.5vw, 4.5rem));
-  background-color: rgb(0, 153, 224);
+  min-height: max(calc(100vh - clamp(3rem, 5.5vw, 4.5rem)), 65rem);
   background-image: url("../public/images/1644243.jpg");
   background-repeat: no-repeat;
   background-size: cover;
