--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  min-height: max(calc(100vh - clamp(3rem, 5.5vw, 4.5rem)), 50rem);
+  background-color: transparent;
 }
 
 a {
